fixed the align content in tablet for the projects section

--- a/style.css
+++ b/style.css
@@ -146,14 +146,14 @@ a:hover {
 }
 
 .icon-some:hover {
-    opacity: .6;
+    opacity: .4;
     transition: .5s ease;
     box-shadow: 0 0 0 10px var(--primaryBlack);
     transform: scale(1.3);
 }
 
 .icon-some-footer:hover {
-    opacity: .6;
+    opacity: .4;
     transition: .5s ease;
     box-shadow: 0 0 0 10px var(--primaryWhite);
     transform: scale(1.3);
@@ -559,8 +559,7 @@ a:hover {
         display: flex;
         flex-direction: row;
         gap: 1.5rem;
-        align-items: center;
-        justify-content: center;
+        align-content: space-between;
         color: var(--primaryWhite);
         margin: 1.5rem;
         height: 450px;
@@ -577,6 +576,14 @@ a:hover {
         margin: 2rem 0;
         object-fit: cover;
         object-position: top 700px;
+    }
+
+    .project-detail {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        justify-content: space-between;
+        height: 100%;
     }
 
     .buttons-projects {
@@ -735,11 +742,18 @@ a:hover {
         display: flex;
         flex-direction: row;
         gap: 2rem;
-        align-items: center;
-        justify-content: center;
+        align-content: space-between;
         color: var(--primaryWhite);
-        margin: 1.5rem;
-        height: 450px;
+        margin: 2rem 0;
+        height: 400px;
+    }
+
+    .project-detail {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        justify-content: space-between;
+        height: 100%;
     }
 
     .image-project-box {
